packable/packable-derive-test/tests/fail/unknown_ident.rs
// Copyright 2023 IOTA Stiftung
// SPDX-License-Identifier: Apache-2.0

#![allow(unused_imports)]

use core::convert::Infallible;

use packable::Packable;

#[derive(Packable)]
#[packable(unknown_ident = true)]
pub struct Unit;

fn main() {}
